crates/sieve-rules/bench-data/benign-near/extra-generic-multilingual/extra-multilingual-068.txt
Docker build 报错，贴一下完整输出：

Step 8/12 : RUN cargo build --release
 ---> Running in a3f89b2c1d4e
error: failed to compile `myapp v0.1.0 (/app)`

Caused by:
  process didn't exit successfully: `rustc --edition=2021 src/main.rs --error-format=json` (exit code: 1)
  error[E0463]: can't find crate for `serde_json`
   --> src/main.rs:3:5
    |
  3 | use serde_json::Value;
    | ^^^^^^^^^^ can't find crate

我在 Cargo.toml 里有 serde_json，本地 build 没问题，Dockerfile 里漏了什么步骤？
